--- a/repository.yaml
+++ b/repository.yaml
@@ -3,3 +3,6 @@ leakDetectionExemptions:
   - ruleId: 'filename_private_key_5'
     filePaths:
       - '/rds-combined-ca-bundle.pem'
+      - '/Crypto/SelfTest/Signature/test_pkcs1_15.py'
+      - '/Crypto/SelfTest/PublicKey/test_importKey.py'
+      - '/Crypto/SelfTest/Cipher/test_pkcs1_15.py'
